--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-pdf": "^6.2.2",
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
+    "react-to-print": "^2.14.12",
     "react-toastify": "^9.1.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
