--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,7 +1,15 @@
 {
   "compilerOptions": {
     "paths": {
-      "@/*": ["./src/*"]
+      "@public/*": ["./public/*"],
+      "@app/*": ["./src/app/*"],
+      "@core/*": ["./src/core/*"],
+      "@template/*": ["./src/components/templates/*"],
+      "@layout/*": ["./src/components/layout/*"],
+      "@atom/*": ["./src/components/atom/*"],
+      "@molecule/*": ["./src/components/molecule/*"],
+      "@organisms/*": ["./src/components/organisms/*"],
+      "@style/*": ["./src/core/style/*"]
     }
   }
 }
