add components to project

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -4,8 +4,8 @@
       "@public/*": ["./public/*"],
       "@app/*": ["./src/app/*"],
       "@core/*": ["./src/core/*"],
-      "@template/*": ["./src/components/templates/*"],
-      "@layout/*": ["./src/components/layout/*"],
+      "@template/*": ["./src/templates/*"],
+      "@partial/*": ["./src/partials/*"],
       "@atom/*": ["./src/components/atom/*"],
       "@molecule/*": ["./src/components/molecule/*"],
       "@organisms/*": ["./src/components/organisms/*"],
