--- a/package.json
+++ b/package.json
@@ -11,9 +11,14 @@
   "dependencies": {
     "antd": "^5.9.4",
     "axios": "^1.5.1",
+    "formik": "^2.4.5",
     "next": "13.5.4",
     "react": "^18",
     "react-dom": "^18",
+    "react-hot-toast": "^2.4.1",
+    "react-icons": "^4.11.0",
+    "react-query": "^3.39.3",
+    "yup": "^1.3.2",
     "zustand": "^4.4.3"
   },
   "devDependencies": {
