--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "antd": "^5.9.4",
     "axios": "^1.5.1",
     "formik": "^2.4.5",
-    "next": "13.5.4",
+    "next": "^13.4.19",
     "react": "^18",
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
