--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.11.0",
+    "react-multi-date-picker": "^4.3.5",
     "react-query": "^3.39.3",
     "yup": "^1.3.2",
     "zustand": "^4.4.3"
