--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "antd": "^5.9.4",
     "axios": "^1.5.1",
+    "cookies-next": "^4.0.0",
     "formik": "^2.4.5",
     "next": "^13.4.19",
     "react": "^18",
