--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.5.1",
     "cookies-next": "^4.0.0",
     "formik": "^2.4.5",
+    "moment-jalaali": "^0.10.0",
     "next": "^13.4.19",
     "react": "^18",
     "react-dom": "^18",
