--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/error-message": "^2.0.1",
+    "@hookform/resolvers": "^3.3.2",
     "antd": "^5.9.4",
     "axios": "^1.5.1",
     "cookies-next": "^4.0.0",
@@ -17,6 +19,7 @@
     "next": "^13.4.19",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.48.2",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.11.0",
     "react-multi-date-picker": "^4.3.5",
@@ -27,8 +30,11 @@
   "devDependencies": {
     "autoprefixer": "^10",
     "eslint": "^8",
-    "eslint-config-next": "13.5.4",
+    "eslint-config-next": "14.0.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-prettier": "^5.0.1",
     "postcss": "^8",
+    "prettier": "^3.0.3",
     "tailwindcss": "^3"
   }
 }
